feat: deploy setting for documentdb